--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -56,12 +56,12 @@
             <input type="password" name="password2" class="form-control" placeholder="Confirm password" required>
           </div>
           <div class="d-grid">
-            <button type="submit" class="btn btn-success"><i class="bi bi-check-lg"></i> Reset Password</button>
+            <button type="submit" class="btn btn-dark"><i class="bi bi-check-lg"></i> Reset Password</button>
           </div>
         </form>
 
         <div class="mt-3 text-center">
-          <a href="/login/"><i class="bi bi-box-arrow-in-left"></i> Back to Login</a>
+          <a href="{% url 'user_login' %}"><i class="bi bi-box-arrow-in-left"></i> Back to Login</a>
         </div>
       </div>
     </div>
