--- a/templates/user_view.html
+++ b/templates/user_view.html
@@ -18,18 +18,19 @@
         <div class="posts-grid">
             {% for post in page %}
             <div class="post-card">
+
                 <!-- IMAGE -->
                 {% if post.image %}
                 <img src="{{ post.image.url }}" class="post-img">
-                {% else %} <img src="{% static 'images/no-image.jpg' %}" class="post-img">
+                {% else %}<img src="{% static 'images/no-image.jpg' %}" class="post-img"></a>
                 {% endif %}
                 <!-- TITLE -->
-                <h4 class="post-title">{{ post.title }}</h4>
+                <a href="{% url 'detail_view' post.id %}" style="text-decoration:none;"> <h4 class="post-title">{{ post.title }}</h4></a>
                 <!-- META -->
                 <p class="post-meta">
                     <i class="far fa-calendar"></i> {{ post.created_at|date:"F j, Y" }} |
                     <i class="far fa-user"></i> {{ post.author.username }} |
-                    <a href="{% url 'post_comments' post.id %}" style="text-decoration:none;">
+                    <a href="{% url 'post_comments' post.id %}" style="text-decoration:none;color:white;">
                         {# Comment Icon #}
                         <i class="far fa-comments"></i>
                         {# Comment Count Text #} {{ post.comments.count }} </a>
@@ -38,21 +39,31 @@
                     {{ post.content|truncatechars:150 }}</p>
             </div> {% endfor %}
         </div>
-        <div class="d-flex justify-content-center mt-4">
-            <ul class="pagination">
-                {% if page.has_previous %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">&laquo; Previous</a>
-                </li> {% endif %} {% for num in page.paginator.page_range %}
-                <li class="page-item {% if page.number == num %}active{% endif %}">
-                    <a class="page-link" href="?page={{ num }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">{{ num }}</a>
-                </li>
-                {% endfor %} {% if page.has_next %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">Next &raquo;</a>
-                </li> {% endif %}
-            </ul>
-        </div>
+         <!-- Pagination -->
+           <nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+
+    {% if page.has_previous %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page.previous_page_number }}">Previous</a>
+      </li>
+    {% endif %}
+
+    {% for num in page.paginator.page_range %}
+        <li class="page-item {% if page.number == num %}active{% endif %}">
+            <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+        </li>
+    {% endfor %}
+
+    {% if page.has_next %}
+      <li class="page-item">
+        <a class="page-link" href="?page={{ page.next_page_number }}">Next</a>
+      </li>
+    {% endif %}
+
+  </ul>
+</nav>
+
     </div>
 </div>
 {% endblock %}
