--- a/templates/user_view.html
+++ b/templates/user_view.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <section class="site-banner" role="banner" aria-label="Blog banner" >
-    <div class="banner-overlay">
+    <div class="banner-overlay" style="position: relative;z-index: 1; ">
         <div class="banner-content container">
             <h1 class="banner-title">A World of Stories in One Place</h1>
             <p class="banner-sub">From inspiring journeys to delicious recipes and the latest tech trends — explore content from every category
